[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wbridge"
version = "1.0.0"
description = "Enhanced interop between WSL and Windows applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
tests = [
  "pytest < 8",
]

[project.scripts]
wb = "wbridge.tui:main"
